--- a/.github/actions/base-deploy-landing/action.yml
+++ b/.github/actions/base-deploy-landing/action.yml
@@ -20,8 +20,12 @@ runs:
   using: "composite"
   steps:
     - uses: actions/checkout@v3
-    - run: npm install -g yarn@1.22.19
-      shell: bash
+
+    - name: Setup Node.js
+      uses: actions/setup-node@v3
+      with:
+        node-version: "20.x"
+
     - run: npm install --global vercel@33.2.0
       shell: bash
 
@@ -46,7 +50,7 @@ runs:
         envFile: .env
 
     - name: Install dependencies
-      run: yarn install
+      run: npm install
       shell: bash
 
     - run: |
